# cpp-ndarray

ct-cpp25-ndarray-lehasam23/: CMakeLists.txt  README.md
ct-cpp25-ndarray-lehasam23/lib/: NDArray.h
ct-cpp25-ndarray-lehasam23/test/: tests.cpp
